--- a/MILESTONE 1/css/style.css
+++ b/MILESTONE 1/css/style.css
@@ -34,10 +34,36 @@
     /* test */
     border: 1px solid black;
 }
+/* col */
+.col{
+    height: 100%;
+    /* test */
+    border: 1px solid black;
+}
+.col-sx{
+    width: 37%;
+}
+.col-dx{
+    width: calc(100% - 37%);
+}
 /* END COMMONS */
 
 /* HEADER */
+header{
+    width: 100%;
+    height: 8%;
+    display: flex;
+    /* test */
+    background-color: darkcyan;
+}
 /* END HEADER */
 
 /* MAIN */
+main{
+    width: 100%;
+    height: calc(100% - 8%);
+    display: flex;
+    /* test */
+    background-color: lightblue;
+}
 /* END MAIN */
