--- a/MILESTONE 1/css/style.css
+++ b/MILESTONE 1/css/style.css
@@ -55,8 +55,8 @@ body{
 }
 /* profile circle */
 .circle-profile{
-    width: 50px;
-    height: 50px;
+    width: 43px;
+    height: 43px;
     border-radius: 50%;
     background-color: white;
     overflow: hidden;
@@ -80,6 +80,7 @@ body{
 .user-menu i{
     margin-right: 15px;
 }
+
 /* END COMMONS */
 
 /* HEADER */
@@ -109,9 +110,10 @@ main{
     width: 100%;
     height: calc(100% - 8%);
     display: flex;
-    /* test */
-    background-color: lightblue;
+    background-color: white;
 }
+/* COL SX */
+
 /* notifications */
 #notification{
     width: 100%;
@@ -147,5 +149,31 @@ main{
 }
 #serch-bar > i {
     margin: 0 5%;
+}
+/* contact */
+#contact > .circle-profile{
+    width: 53px;
+    height: 53px;
+    border-radius: 50%;
+    background-color: white;
+    overflow: hidden;
+}
+.contact-container{
+    width: 100%;
+    height: 80px;
+    border-bottom: 1px solid #d8dbd7;
+}
+/* COL DX */
+
+#mex-container{
+    width: 100%;
+    height: calc(100% - 50px);
+    flex-grow: 1;
+    background-image: url(../../boolzapp-assets/img/mine.jpg);
+}
+#mex-bar{
+    width: 100%;
+    height: 50px;
+    border: 1px solid black;
 }
 /* END MAIN */
