--- a/MILESTONE 1/css/style.css
+++ b/MILESTONE 1/css/style.css
@@ -10,6 +10,7 @@ img{
 body{
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
+    min-width: 1100px;
 }
 i {
     cursor: pointer;
@@ -34,6 +35,8 @@ i {
 }
 .app-wrapper{
     margin: auto;
+    min-width: 1000px;
+    min-height: 600px;
     width: 70%;
     height: 95%;
     position: absolute;
@@ -160,17 +163,22 @@ main{
     width: 100%;
     height: 80px;
     border-bottom: 1px solid #d8dbd7;
+    cursor: pointer;
+}
+#contact > h3{
+    margin-left: 10px;
 }
 /* COL DX */
 
-#mex-container{
+#mex-wrapper{
     width: 100%;
-    height: calc(100% - 50px);
+    height: calc(100% - 60px);
     flex-grow: 1;
     background-image: url(../../boolzapp-assets/img/mine.jpg);
+    padding: 50px 70px;
 }
 #mex-bar{
-    height: 50px;
+    height: 60px;
     background-color: #f3eeea;
 }
 #input-mex{
@@ -189,4 +197,27 @@ main{
     font-size: 20px;
     margin: 0 5%;
 }
+/* mex */
+.mex-container{
+    border: 1px solid black;
+    display: flex;
+    flex-direction: column;
+}
+.recived{
+    width: 35%;
+    background-color: white;
+    border-radius: 10px;
+    padding: 10px 15px;
+}
+.send{
+    width: 35%;
+    background-color: #d5f9ba;
+    border-radius: 10px;
+    padding: 10px 15px;
+    justify-content: flex-end;
+}
 /* END MAIN */
+
+.contact-container.active{
+    background-color: rgb(209, 204, 204);
+}
