--- a/MILESTONE 1/css/style.css
+++ b/MILESTONE 1/css/style.css
@@ -136,7 +136,8 @@ main{
 /* serch concact */
 #container-serch{
     width: 100%;
-    height: 35px;
+    height: 40px;
+    max-height: 50px;
     background-color: #f8f8f8;
 
 }
@@ -148,8 +149,13 @@ main{
     font-size: 13px;
     color: #a5a3a3;
 }
-#serch-bar > i {
+#serch-bar > span {
     margin: 0 5%;
+}
+#serch-bar > input{
+    width: 100%;
+    height: 100%;
+    border: 0px;
 }
 /* contact */
 #contact > .circle-profile{
@@ -176,6 +182,7 @@ main{
     flex-grow: 1;
     background-image: url(../../boolzapp-assets/img/mine.jpg);
     padding: 50px 70px;
+    overflow-y: auto;
 }
 #mex-bar{
     height: 60px;
@@ -199,21 +206,30 @@ main{
 }
 /* mex */
 .mex-container{
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
+    
 }
 .recived{
-    width: 35%;
+    width: 40%;
     background-color: white;
     border-radius: 10px;
     padding: 10px 15px;
+    margin: 5px 0;
+    align-self: flex-start;
 }
 .send{
-    width: 35%;
+    width: 40%;
     background-color: #d5f9ba;
     border-radius: 10px;
     padding: 10px 15px;
+    align-self: flex-end;
+    margin: 5px 0;
+}
+.date{
+    font-size: 12px;
+    color: #b1b1b1;
+    display: flex;
     justify-content: flex-end;
 }
 /* END MAIN */
