--- a/MILESTONE 1/css/style.css
+++ b/MILESTONE 1/css/style.css
@@ -10,7 +10,6 @@ img{
 body{
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
-    min-width: 1100px;
 }
 i {
     cursor: pointer;
@@ -19,30 +18,15 @@ i {
 #root{
     width: 100%;
     height: 100vh;
-    position: relative;
-    /* test */
-    background-color: red;
-}
-.container-background-TOP{
-    width: 100%;
-    height: 18%;
-    background-color: #209688;
-}
-.container-background-BOTTOM{
-    width: 100%;
-    height: calc(100% - 18%);
-    background-color: #d8dbd7;
+    min-width: 1200px;
+    background-image:linear-gradient(to bottom, #009688 0px, #009688 15vh, #dddbd1 15vh, #d2dbdc 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .app-wrapper{
-    margin: auto;
-    min-width: 1000px;
-    min-height: 600px;
     width: 70%;
     height: 95%;
-    position: absolute;
-    top: calc((100vh - 95%)/ 2);
-    left: 0;
-    right: 0;
 }
 /* col */
 .col{
@@ -50,6 +34,7 @@ i {
 }
 .col-sx{
     width: 37%;
+    border-right: 1px solid #d8dbd7;
 }
 .col-dx{
     width: calc(100% - 37%);
@@ -88,6 +73,7 @@ i {
 header{
     width: 100%;
     height: 8%;
+    min-height: 50px;
     display: flex;
     background-color: #eaeaea;
 }
@@ -98,11 +84,15 @@ header > .col{
 /* user profile */
 #user-profile, #current-profile{
     flex-grow: 1;
+    margin-left: 10px;
 }
 /* ultimo accesso */
 .last-access{
     font-size: 13px;
     color: #b1b1b1;
+}
+.info-current-profile, .info-user-profile{
+    padding: 0 15px;
 }
 /* END HEADER */
 
@@ -114,7 +104,10 @@ main{
     background-color: white;
 }
 /* COL SX */
-
+main > .col-sx{
+    display: flex;
+    flex-direction: column;
+}
 /* notifications */
 #notification{
     width: 100%;
@@ -158,6 +151,10 @@ main{
     border: 0px;
 }
 /* contact */
+#contacts-wrap{
+    overflow-y: auto;
+    flex-grow: 1;
+}
 #contact > .circle-profile{
     width: 53px;
     height: 53px;
@@ -170,6 +167,7 @@ main{
     height: 80px;
     border-bottom: 1px solid #d8dbd7;
     cursor: pointer;
+    padding-left: 10px;
 }
 #contact > h3{
     margin-left: 10px;
@@ -204,30 +202,32 @@ main{
     font-size: 20px;
     margin: 0 5%;
 }
-/* mex */
+/* mex text*/
 .mex-container{
     display: flex;
     flex-direction: column;
     
 }
-.recived{
-    width: 40%;
-    background-color: white;
+/* commons mex recived and send */
+.recived, .send{
+    min-width: 17%;
+    max-width: 80%;
     border-radius: 10px;
     padding: 10px 15px;
     margin: 5px 0;
+}
+/* single characteristic (recived and send) */
+.recived{
+    background-color: white;
     align-self: flex-start;
 }
 .send{
-    width: 40%;
     background-color: #d5f9ba;
-    border-radius: 10px;
-    padding: 10px 15px;
     align-self: flex-end;
-    margin: 5px 0;
 }
+
 .date{
-    font-size: 12px;
+    font-size: 11px;
     color: #b1b1b1;
     display: flex;
     justify-content: flex-end;
@@ -237,3 +237,5 @@ main{
 .contact-container.active{
     background-color: rgb(209, 204, 204);
 }
+
+
