--- a/MILESTONE 2/css/style.css
+++ b/MILESTONE 2/css/style.css
@@ -82,10 +82,11 @@ header > .col{
     align-items: center;
 }
 /* user profile */
-#user-profile, #current-profile{
+#user-profile, #active-profile{
     flex-grow: 1;
     margin-left: 10px;
 }
+
 /* ultimo accesso */
 .last-access{
     font-size: 13px;
@@ -234,6 +235,8 @@ main > .col-sx{
 }
 /* END MAIN */
 
+
+/* ACTIVE */
 .contact-container.active{
     background-color: rgb(209, 204, 204);
 }
