--- a/MILESTONE 5/css/style.css
+++ b/MILESTONE 5/css/style.css
@@ -169,9 +169,13 @@ main > .col-sx{
     border-bottom: 1px solid #d8dbd7;
     cursor: pointer;
     padding-left: 10px;
+    position: relative;
 }
 #contact > h3{
     margin-left: 10px;
+}
+#info-contact{
+    padding-left: 15px;
 }
 /* COL DX */
 
@@ -260,6 +264,21 @@ main > .col-sx{
 }
 .active-menu-mex{
     display: block;
+}
+
+/* DATE CONTACTS */
+#date-last-mex-contact{
+    position: absolute;
+    top: 10%;
+    right: 5%;
+    font-size:12px;
+    color: rgb(146, 143, 143);
+}
+#last-mex-contact{
+    display: flex;
+    flex-direction: column;
+    font-size:12px;
+    color: rgb(146, 143, 143);
 }
 
 
